--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -8,10 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    Welcome to GameAssist. This App will help you to master the art of game development quickly. Let's get started!
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://planbgames.de/">support center</a> will be your guide.</p>
-  </div>
+<ion-searchbar color="success" animated></ion-searchbar>
 
    <ion-card>
     <img src="https://instabug.com/blog/wp-content/uploads/2017/12/Cryengine-1024x576.jpg">
@@ -23,22 +20,26 @@
   <ion-card-content>
       <ion-item href="#" class="activated">
       <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Introduction</ion-label>
+      <ion-label>Introduction <ion-badge color="success">44</ion-badge>
+</ion-label>
     </ion-item>
 
     <ion-item href="#">
       <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Unity 3D</ion-label>
+      <ion-label>Unity 3D <ion-badge color="success">44</ion-badge>
+</ion-label>
     </ion-item>
 
     <ion-item class="activated">
       <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Unreal Engine</ion-label>
+      <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
+</ion-label>
     </ion-item>
 
     <ion-item>
       <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Cry Engine</ion-label>
+      <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
+</ion-label>
     </ion-item>
   </ion-card-content>
 </ion-card>
