--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -6,10 +6,24 @@
     <ion-title><b>Game</b> Assist</ion-title>
   </ion-toolbar>
 <ion-toolbar>
-  <ion-searchbar placeholder="Search courses" color="success" animated></ion-searchbar>
+  <ion-searchbar placeholder="Search courses" animated></ion-searchbar>
 </ion-toolbar>
 
 </ion-header>
+
+<!-- fab placed to the top end -->
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button color="success">
+    <ion-icon name="arrow-dropup"></ion-icon>
+  </ion-fab-button>
+
+  <ion-fab-list side="top">
+  <ion-fab-button color="success" href="statistics"><ion-icon name="analytics"></ion-icon></ion-fab-button>
+  <ion-fab-button color="success" href="#"><ion-icon name="cog"></ion-icon></ion-fab-button>
+</ion-fab-list>
+
+
+</ion-fab>
 
 <ion-content>
    <ion-card>
@@ -20,7 +34,7 @@
   </ion-card-header>
 
   <ion-card-content>
-      <ion-item href="#" class="activated">
+      <ion-item href="#">
       <ion-icon name="cog" slot="start"></ion-icon>
       <ion-label>Introduction <ion-badge color="success">44</ion-badge>
 </ion-label>
@@ -32,13 +46,13 @@
 </ion-label>
     </ion-item>
 
-    <ion-item class="activated">
+    <ion-item href="#">
       <ion-icon name="cog" slot="start"></ion-icon>
       <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
 </ion-label>
     </ion-item>
 
-    <ion-item>
+    <ion-item href="#">
       <ion-icon name="cog" slot="start"></ion-icon>
       <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
 </ion-label>
