Statistics routing fixes and settings page added

--- a/GameAssist/src/app/settings/settings.page.html
+++ b/GameAssist/src/app/settings/settings.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title><b>Game</b> Assist - Statistics</ion-title>
+    <ion-title><b>Game</b> Assist - Settings</ion-title>
   </ion-toolbar>
   <ion-toolbar>
   <ion-buttons slot="start">
@@ -14,13 +14,7 @@
 
 <ion-content>
 
-  <ion-card>
-    <img src="https://cdn3.iconfinder.com/data/icons/chart-diagram/64/statistics_horizontal_comparison-512.png">
-  <ion-card-header>
-    <ion-card-subtitle>Analytics</ion-card-subtitle>
-    <ion-card-title>Your statistics will be displayed here.</ion-card-title>
-  </ion-card-header>
-</ion-card>
+
 
 </ion-content>
 
