--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -19,7 +19,7 @@
 
   <ion-fab-list side="top">
   <ion-fab-button color="success" href="statistics"><ion-icon name="analytics"></ion-icon></ion-fab-button>
-  <ion-fab-button color="success" href="#"><ion-icon name="cog"></ion-icon></ion-fab-button>
+  <ion-fab-button color="success" href="settings"><ion-icon name="cog"></ion-icon></ion-fab-button>
 </ion-fab-list>
 
 
@@ -98,7 +98,7 @@
   </ion-card-header>
 
   <ion-card-content>
-    <ion-item href="#" class="activated">
+    <ion-item href="#">
 	    <ion-icon name="code" slot="start"></ion-icon>
 	    <ion-label>Introduction</ion-label>
 	  </ion-item>
@@ -108,7 +108,7 @@
 	    <ion-label>This is a lesson.</ion-label>
 	  </ion-item>
 
-	  <ion-item class="activated">
+	  <ion-item>
 	    <ion-icon name="code" slot="start"></ion-icon>
 	    <ion-label>This is a lesson.</ion-label>
 	  </ion-item>
