--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -18,8 +18,8 @@
   </ion-fab-button>
 
   <ion-fab-list side="top">
-  <ion-fab-button color="success" href="statistics"><ion-icon name="analytics"></ion-icon></ion-fab-button>
-  <ion-fab-button color="success" href="settings"><ion-icon name="cog"></ion-icon></ion-fab-button>
+  <ion-fab-button color="success" [routerLink]="['/statistics']"><ion-icon name="analytics"></ion-icon></ion-fab-button>
+  <ion-fab-button color="success" [routerLink]="['/settings']"><ion-icon name="cog"></ion-icon></ion-fab-button>
 </ion-fab-list>
 
 
