--- a/GameAssist/src/app/settings/settings.page.html
+++ b/GameAssist/src/app/settings/settings.page.html
@@ -5,11 +5,6 @@
     </ion-buttons>
     <ion-title><b>Game</b> Assist - Settings</ion-title>
   </ion-toolbar>
-  <ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="home"></ion-back-button>
-  </ion-buttons>
-</ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -25,6 +20,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button expand="block" size="large" color="success" fill="outline" href="home">Go back</ion-button>
+    <ion-button expand="block" size="large" color="success" fill="outline" [routerLink]="['/home']">Go back</ion-button>
   </ion-toolbar>
 </ion-footer>
