--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -28,98 +28,110 @@
 </ion-fab>
 
 <ion-content>
-   <ion-card>
-    <img src="https://instabug.com/blog/wp-content/uploads/2017/12/Cryengine-1024x576.jpg">
-  <ion-card-header>
-    <ion-card-subtitle>Chapter 1</ion-card-subtitle>
-    <ion-card-title>Game Engines</ion-card-title>
-  </ion-card-header>
 
-  <ion-card-content>
-      <ion-item href="#">
-      <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Introduction <ion-badge color="success">44</ion-badge>
-</ion-label>
-    </ion-item>
+  <ion-grid>
+  <ion-row>
+    <ion-col>
+      <div>
+        <ion-card>
+         <img src="https://instabug.com/blog/wp-content/uploads/2017/12/Cryengine-1024x576.jpg">
+       <ion-card-header>
+         <ion-card-subtitle>Chapter 1</ion-card-subtitle>
+         <ion-card-title>Game Engines</ion-card-title>
+       </ion-card-header>
 
-    <ion-item href="#">
-      <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Unity 3D <ion-badge color="success">44</ion-badge>
-</ion-label>
-    </ion-item>
+       <ion-card-content>
+           <ion-item href="#">
+           <ion-icon name="cog" slot="start"></ion-icon>
+           <ion-label>Introduction <ion-badge color="success">44</ion-badge>
+     </ion-label>
+         </ion-item>
 
-    <ion-item href="#">
-      <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
-</ion-label>
-    </ion-item>
+         <ion-item href="#">
+           <ion-icon name="cog" slot="start"></ion-icon>
+           <ion-label>Unity 3D <ion-badge color="success">44</ion-badge>
+     </ion-label>
+         </ion-item>
 
-    <ion-item href="#">
-      <ion-icon name="cog" slot="start"></ion-icon>
-      <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
-</ion-label>
-    </ion-item>
-  </ion-card-content>
-</ion-card>
+         <ion-item href="#">
+           <ion-icon name="cog" slot="start"></ion-icon>
+           <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
+     </ion-label>
+         </ion-item>
 
-   <ion-card>
-    <img src="https://images.unsplash.com/photo-1535598745644-bc7913bb1a2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2710&q=80">
-  <ion-card-header>
-    <ion-card-subtitle>Chapter 2</ion-card-subtitle>
-    <ion-card-title>Game Design</ion-card-title>
-  </ion-card-header>
+         <ion-item href="#">
+           <ion-icon name="cog" slot="start"></ion-icon>
+           <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
+     </ion-label>
+         </ion-item>
+       </ion-card-content>
+     </ion-card>
+      </div>
+    </ion-col>
+    <ion-col>
+      <div>
+        <ion-card>
+         <img src="https://images.unsplash.com/photo-1535598745644-bc7913bb1a2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2710&q=80">
+       <ion-card-header>
+         <ion-card-subtitle>Chapter 2</ion-card-subtitle>
+         <ion-card-title>Game Design</ion-card-title>
+       </ion-card-header>
 
-  <ion-card-content>
-      <ion-item href="#" class="activated">
-      <ion-icon name="brush" slot="start"></ion-icon>
-      <ion-label>Introduction</ion-label>
-    </ion-item>
+       <ion-card-content>
+           <ion-item href="#" class="activated">
+           <ion-icon name="brush" slot="start"></ion-icon>
+           <ion-label>Introduction <ion-badge color="danger">42</ion-badge></ion-label>
+         </ion-item>
 
-    <ion-item href="#">
-      <ion-icon name="brush" slot="start"></ion-icon>
-      <ion-label>This is a lesson.</ion-label>
-    </ion-item>
+         <ion-item href="#">
+           <ion-icon name="brush" slot="start"></ion-icon>
+           <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
+         </ion-item>
 
-    <ion-item class="activated">
-      <ion-icon name="brush" slot="start"></ion-icon>
-      <ion-label>This is a lesson.</ion-label>
-    </ion-item>
+         <ion-item class="activated">
+           <ion-icon name="brush" slot="start"></ion-icon>
+           <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
+         </ion-item>
 
-    <ion-item>
-      <ion-icon name="brush" slot="start"></ion-icon>
-      <ion-label>This is a lesson.</ion-label>
-    </ion-item>
-  </ion-card-content>
-</ion-card>
+         <ion-item>
+           <ion-icon name="brush" slot="start"></ion-icon>
+           <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
+         </ion-item>
+       </ion-card-content>
+     </ion-card>
+      </div>
+    </ion-col>
+    <ion-col>
+      <ion-card>
+        <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2702&q=80">
+      <ion-card-header>
+        <ion-card-subtitle>Chapter 3</ion-card-subtitle>
+        <ion-card-title>Game Development</ion-card-title>
+      </ion-card-header>
 
-  <ion-card>
-  	<img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2702&q=80">
-  <ion-card-header>
-    <ion-card-subtitle>Chapter 3</ion-card-subtitle>
-    <ion-card-title>Game Development</ion-card-title>
-  </ion-card-header>
+      <ion-card-content>
+        <ion-item href="#">
+          <ion-icon name="code" slot="start"></ion-icon>
+          <ion-label>Introduction <ion-badge color="primary">12</ion-badge></ion-label>
+        </ion-item>
 
-  <ion-card-content>
-    <ion-item href="#">
-	    <ion-icon name="code" slot="start"></ion-icon>
-	    <ion-label>Introduction</ion-label>
-	  </ion-item>
+        <ion-item href="#">
+          <ion-icon name="code" slot="start"></ion-icon>
+          <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
+        </ion-item>
 
-	  <ion-item href="#">
-	    <ion-icon name="code" slot="start"></ion-icon>
-	    <ion-label>This is a lesson.</ion-label>
-	  </ion-item>
+        <ion-item>
+          <ion-icon name="code" slot="start"></ion-icon>
+          <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
+        </ion-item>
 
-	  <ion-item>
-	    <ion-icon name="code" slot="start"></ion-icon>
-	    <ion-label>This is a lesson.</ion-label>
-	  </ion-item>
-
-	  <ion-item>
-	    <ion-icon name="code" slot="start"></ion-icon>
-	    <ion-label>This is a lesson.</ion-label>
-	  </ion-item>
-  </ion-card-content>
-</ion-card>
-
+        <ion-item>
+          <ion-icon name="code" slot="start"></ion-icon>
+          <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 </ion-content>
