--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -42,7 +42,7 @@
     <ion-col>
       <div>
         <ion-card>
-         <img src="https://instabug.com/blog/wp-content/uploads/2017/12/Cryengine-1024x576.jpg">
+         <img src="https://images.unsplash.com/photo-1517650862521-d580d5348145?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80">
        <ion-card-header>
          <ion-card-subtitle>Chapter 1</ion-card-subtitle>
          <ion-card-title>Game Engines</ion-card-title>
@@ -110,6 +110,7 @@
       </div>
     </ion-col>
     <ion-col>
+      <div>
       <ion-card>
         <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2702&q=80">
       <ion-card-header>
@@ -139,7 +140,14 @@
         </ion-item>
       </ion-card-content>
     </ion-card>
+    </div>
     </ion-col>
   </ion-row>
 </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+    <ion-title><img width="40px" align="middle" height="auto" src="https://planbgames.de/wp-content/uploads/2019/01/logoshort-e1552547290908.png"></ion-title>
+  </ion-toolbar>
+</ion-footer>
