--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -49,25 +49,25 @@
        </ion-card-header>
 
        <ion-card-content>
-           <ion-item href="#">
+           <ion-item (click)="presentAlert('Test')">
            <ion-icon name="cog" slot="start"></ion-icon>
            <ion-label>Introduction <ion-badge color="success">44</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item href="#">
+         <ion-item (click)="presentAlert('Test')">
            <ion-icon name="cog" slot="start"></ion-icon>
            <ion-label>Unity 3D <ion-badge color="success">44</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item href="#">
+         <ion-item (click)="presentAlert('Test')">
            <ion-icon name="cog" slot="start"></ion-icon>
            <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item href="#">
+         <ion-item (click)="presentAlert('Test')">
            <ion-icon name="cog" slot="start"></ion-icon>
            <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
      </ion-label>
