dark layout test

--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -147,7 +147,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-title><img width="40px" align="middle" height="auto" src="https://planbgames.de/wp-content/uploads/2019/01/logoshort-e1552547290908.png"></ion-title>
   </ion-toolbar>
 </ion-footer>
