--- a/GameAssist/src/app/settings/settings.page.html
+++ b/GameAssist/src/app/settings/settings.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -14,12 +14,12 @@
       <ion-toggle slot="end" color="{{entry.color}}" [(ngModel)]="entry.checked"></ion-toggle>
     </ion-item>
   </ion-list>
-  <ion-button expand="block" size="large" color="primary" (click)="presentToast()" [routerLink]="['/home']">Save settings</ion-button>
+  <ion-button expand="block" size="large" color="dark" (click)="presentToast()" [routerLink]="['/home']">Save settings</ion-button>
 </ion-content>
 
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button expand="block" size="large" color="success" fill="outline" [routerLink]="['/home']">Go back</ion-button>
+    <ion-button expand="block" size="large" color="dark" fill="outline" [routerLink]="['/home']">Go back</ion-button>
   </ion-toolbar>
 </ion-footer>
