--- a/GameAssist/src/app/home/home.page.html
+++ b/GameAssist/src/app/home/home.page.html
@@ -49,27 +49,27 @@
        </ion-card-header>
 
        <ion-card-content>
-           <ion-item (click)="presentAlert('Course not available.')">
+           <ion-item (click)="presentAlert('Course not available.')" lines='none'>
            <ion-icon name="cog" slot="start"></ion-icon>
-           <ion-label>Introduction <ion-badge color="success">44</ion-badge>
+           <ion-label>Introduction <ion-badge color="success"><ion-icon name="happy"></ion-icon> New!</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item (click)="presentAlert('Course not available.')">
+         <ion-item (click)="presentAlert('Course not available.')" lines='none'>
            <ion-icon name="cog" slot="start"></ion-icon>
-           <ion-label>Unity 3D <ion-badge color="success">44</ion-badge>
+           <ion-label>Unity 3D <ion-badge color="success"><ion-icon name="happy"></ion-icon> New!</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item (click)="presentAlert('Course not available.')">
+         <ion-item (click)="presentAlert('Course not available.')" lines='none'>
            <ion-icon name="cog" slot="start"></ion-icon>
-           <ion-label>Unreal Engine <ion-badge color="success">44</ion-badge>
+           <ion-label>Unreal Engine <ion-badge color="success"><ion-icon name="happy"></ion-icon> New!</ion-badge>
      </ion-label>
          </ion-item>
 
-         <ion-item (click)="presentAlert('Course not available.')">
+         <ion-item (click)="presentAlert('Course not available.')" lines='none'>
            <ion-icon name="cog" slot="start"></ion-icon>
-           <ion-label>Cry Engine <ion-badge color="success">44</ion-badge>
+           <ion-label>Cry Engine <ion-badge color="success"><ion-icon name="happy"></ion-icon> New!</ion-badge>
      </ion-label>
          </ion-item>
        </ion-card-content>
@@ -86,22 +86,22 @@
        </ion-card-header>
 
        <ion-card-content>
-           <ion-item href="#" class="activated">
+           <ion-item href="#" class="activated" lines='none'>
            <ion-icon name="brush" slot="start"></ion-icon>
            <ion-label>Introduction <ion-badge color="danger">42</ion-badge></ion-label>
          </ion-item>
 
-         <ion-item href="#">
+         <ion-item href="#" lines='none'>
            <ion-icon name="brush" slot="start"></ion-icon>
            <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
          </ion-item>
 
-         <ion-item class="activated">
+         <ion-item class="activated" lines='none'>
            <ion-icon name="brush" slot="start"></ion-icon>
            <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
          </ion-item>
 
-         <ion-item>
+         <ion-item lines='none'>
            <ion-icon name="brush" slot="start"></ion-icon>
            <ion-label>This is a lesson. <ion-badge color="danger">42</ion-badge></ion-label>
          </ion-item>
@@ -119,22 +119,22 @@
       </ion-card-header>
 
       <ion-card-content>
-        <ion-item href="#">
+        <ion-item href="#" lines='none'>
           <ion-icon name="code" slot="start"></ion-icon>
           <ion-label>Introduction <ion-badge color="primary">12</ion-badge></ion-label>
         </ion-item>
 
-        <ion-item href="#">
+        <ion-item href="#" lines='none'>
           <ion-icon name="code" slot="start"></ion-icon>
           <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
         </ion-item>
 
-        <ion-item>
+        <ion-item lines='none'>
           <ion-icon name="code" slot="start"></ion-icon>
           <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
         </ion-item>
 
-        <ion-item>
+        <ion-item lines='none'>
           <ion-icon name="code" slot="start"></ion-icon>
           <ion-label>This is a lesson. <ion-badge color="primary">12</ion-badge></ion-label>
         </ion-item>
