--- a/GameAssist/src/app/statistics/statistics.page.html
+++ b/GameAssist/src/app/statistics/statistics.page.html
@@ -8,13 +8,28 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <img src="https://cdn3.iconfinder.com/data/icons/chart-diagram/64/statistics_horizontal_comparison-512.png">
-  <ion-card-header>
-    <ion-card-subtitle>Analytics</ion-card-subtitle>
-    <ion-card-title>Your statistics will be displayed here.</ion-card-title>
-  </ion-card-header>
-</ion-card>
+
+  <ion-grid>
+  <ion-row>
+    <ion-col>
+      <div>
+        <ion-card>
+          <img src="https://cdn3.iconfinder.com/data/icons/chart-diagram/64/statistics_horizontal_comparison-512.png">
+        <ion-card-header>
+          <ion-card-subtitle>Analytics</ion-card-subtitle>
+          <ion-card-title>Your statistics will be displayed here.</ion-card-title>
+        </ion-card-header>
+      </ion-card>
+      </div>
+    </ion-col>
+    <ion-col>
+      <div></div>
+    </ion-col>
+    <ion-col>
+      <div></div>
+  </ion-col>
+</ion-row>
+</ion-grid>
 
 </ion-content>
 
